メモ投稿機能のフロントエンド実装

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,13 +1,17 @@
 <h1>AjaxApp</h1>
 <%= form_with url: "/posts", method: :post,id: "form" do |form| %>
-  <%= form.text_field :content %>
+  <%= form.text_field :content  , id: "content"%>
   <%= form.submit '投稿する' , id: "submit" %>
 <% end %>
+
+<div id="list">
+</div>
+
 <% @posts.each do |post| %>
   <%############################%>
 　<%# 0.既読にしたい要素を記述       %>
   <%############################%>
-  <div class="post" data-id=<%= post.id %> data-check=<%= post.checked %>>
+  <div class="post" data-id = <%= post.id %> data-check=<%= post.checked %>>
   <%# 上のdata-id data-checkは、jsファイルの為にここで定義したデータ。いわゆるカスタムデータ %>
   <%# カスタムデータ自体は、Javascriptに必須なものではないが、Javascriptを使用する際に、自分でカスタマイズした任意の情報があると便利。 %>
     <div class="post-date">
